syntax = "proto3";

package review;

option go_package = "review-service/review";

message ProductDetails {
    string asin = 1;
    string product_title = 2;
    string product_price = 3;
    string product_original_price = 4;
    string currency = 5;
    string country = 6;
    string product_url = 7;
    string product_photo = 8;
    string product_availability = 9;
}

message GetProductDetailsRequest {
    string asin = 1;
    string country = 2;
}

message GetProductDetailsResponse {
    ProductDetails product = 1;
}

message Products {
    string asin = 1;
    string product_title = 2;
    string product_price = 3;
    string product_original_price = 4;
    string currency = 5;
    string product_url = 6;
    string product_photo = 7;
}

message GetProductsRequest {
    string page = 1;
    string country = 2;
}

message GetProductsResponse {
    repeated Products product = 1;
}

service Product {
    rpc GetProductDetails(GetProductDetailsRequest) returns (GetProductDetailsResponse){}
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse){}
}